refined some text, put in bibs, cleaned up a bit

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -1,3 +1,8 @@
+@MISC{weightwatcher_pagkage,
+  title =        {{WeightWatcher}},
+  note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
+}
+
 @TECHREPORT{AS17emergence_TR,
   author =    {A. Achille and S. Soatto},
   title =     {Emergence of invariance and disentanglement in deep representations},
@@ -3189,7 +3194,7 @@
 
 @INPROCEEDINGS{NTS15,
   author =       {B. Neyshabur and R. Tomioka and N. Srebro},
-  title =        {Norm-Based Capacity Control in Neural Network},
+  title =        {Norm-Based Capacity Control in Neural Networks},
   booktitle =    {Proceedings of the 28th Annual Conference on Learning Theory},
   year =         {2015},
   pages =        {1376--1401},
@@ -3796,6 +3801,16 @@
   title =     {Deep learning in Neural Networks: An Overview},
   number =    {Preprint: arXiv:1404.7828},
   year =      {2014},
+}
+
+@ARTICLE{Sch07,
+  author =       {D. Schleicher},
+  title =        {Hausdorff Dimension, Its Properties, and Its Surprises},
+  journal =      {The American Mathematical Monthly},
+  year =         {2007},
+  volume =       {114},
+  number =       {6},
+  pages =        {509--528},
 }
 
 @TECHREPORT{SGGS16_TR,
